--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro": "^5.7.2",
     "dotenv": "^16.5.0",
     "pg": "^8.14.1",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "uuid": "^11.1.0"
   }
 }
